# ndx7cpp

./: .gitattributes  BUILD_STATUS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: project-pipeline.yml  release.yml
Source/: DX7BulkPacker.cpp  DX7BulkPacker.h  DX7CustomLookAndFeel.cpp  DX7CustomLookAndFeel.h  DX7TabComponents.cpp  DX7TabComponents.h  DX7Voice.cpp  DX7Voice.h  DX7VoicePacker.cpp  DX7VoicePacker.h  EmbeddedModelLoader.cpp  EmbeddedModelLoader.h  MidiGenerator.cpp  MidiGenerator.h  NeuralModelWrapper.cpp  NeuralModelWrapper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ThreadedInferenceEngine.cpp  ThreadedInferenceEngine.h
Source/UI/: DX7CustomLookAndFeel.cpp  DX7LatentSlider.cpp  DX7LatentSlider.h  DX7LatentSliderLookAndFeel.cpp  DX7LatentSliderLookAndFeel.h  DX7TabComponents.cpp  DX7TabComponents.h  SevenSegmentLabel.h
models/: README.md  dx7_vae_model.pt
